--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Non-Local Prior Based Iterative Variable Selection Tool for Genome-Wide Association Studies, or Other High-Dimensional Data
 Version: 2.0
 Date: 2022-09-14
-Authors@R: c(person("Nilotpal", "Sanyal", role = c("aut", "cre"), email = "nilotpal.sanyal@gmail.com"))
+Authors@R: c(person("Nilotpal", "Sanyal", role = c("aut", "cre"), email = "nilotpal.sanyal@gmail.com", comment = c(ORCID = "0000-0003-4814-7602")))
 Author: Nilotpal Sanyal [aut, cre]
 Maintainer: Nilotpal Sanyal <nilotpal.sanyal@gmail.com>
 Description: Package GWASinlps performs variable selection with data from Genome-wide association studies (GWAS), or other high-dimensional data, combining in an iterative framework, the computational efficiency of the screen-and-select variable selection approach based on some association learning and the parsimonious uncertainty quantification provided by the use of non-local priors as described in Sanyal et al. (2019) <DOI:10.1093/bioinformatics/bty472>. 
