updated to version 2.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ importFrom(RcppArmadillo, fastLm)
 import(mombf)
 import(fastglm)
 import(horseshoe)
-importFrom("stats", "cor", "na.omit", "lm", "rbeta", "rbinom", "rnorm", "poisson", "glm", "sd", "dnorm", "uniroot", "pnorm", "nlminb", "coef", "binomial", "residuals")
+import(survival)
+importFrom("stats", "cor", "na.omit", "lm", "rbeta", "rbinom", "rnorm", "poisson", "glm", "sd", "dnorm", "uniroot", "pnorm", "nlminb", "coef", "binomial", "residuals", "as.formula")
 export("GWASinlps", "nlpsLM", "nlpsGLM")
