--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: GWASinlps
 Type: Package
 Title: Non-Local Prior Based Iterative Variable Selection Tool for Genome-Wide Association Studies
-Version: 2.1
-Date: 2022-09-14
+Version: 2.2
+Date: 2022-11-22
 Authors@R: c(person("Nilotpal", "Sanyal", role = c("aut", "cre"), email = "nilotpal.sanyal@gmail.com", comment = c(ORCID = "0000-0003-4814-7602")))
-Description: Performs variable selection with data from Genome-wide association studies (GWAS), or other high-dimensional data, combining in an iterative framework, the computational efficiency of the screen-and-select variable selection approach based on some association learning and the parsimonious uncertainty quantification provided by the use of non-local priors as described in Sanyal et al. (2019) <DOI:10.1093/bioinformatics/bty472>. 
+Description: Performs variable selection with data from Genome-wide association studies (GWAS), or other high-dimensional data with continuous, binary or survival outcomes, combining in an iterative framework the computational efficiency of the structured screen-and-select variable selection strategy based on some association learning and the parsimonious uncertainty quantification provided by the use of non-local priors (see Sanyal et al., 2019 <DOI:10.1093/bioinformatics/bty472>). 
 License: GPL (>=2)
-Depends: mombf, fastglm 
-Imports: Rcpp (>= 1.0.9), RcppArmadillo, horseshoe
+Depends: mombf 
+Imports: Rcpp (>= 1.0.9), RcppArmadillo, fastglm, horseshoe, survival
 Suggests: glmnet
 LinkingTo: Rcpp, RcppArmadillo
 URL: https://nilotpalsanyal.github.io/GWASinlps/
